# libx1000

./: .clang-format  .clangd  .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
debian/: changelog  control
src/: .gitignore  Makefile.am  libconfig.c  libx1000.c  memregions.c  memregions.h  x1000_config.c  x1000_config.h  x1000_ldpreload.c  x1000_memregions.c
test/: dumpconfig.c  dumpmemregions.c
